# vigent-e-scrow

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md  VERCEL_DEPLOY.md  anchor.toml  install_tools.ps1  package-lock.json  package.json
programs/workspace/: Cargo.toml
programs/workspace/src/: lib.rs
scripts/: audit-devnet.ts  deploy-devnet.ts  init_devnet.ts  test-devnet.ts
tests/: workspace.ts
web/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/app/: layout.tsx  page.tsx
web/src/app/app/create/: page.tsx
web/src/app/app/escrow/[id]/: page.tsx
web/src/app/app/escrow/[id]/release/: page.tsx
web/src/app/app/scan/: page.tsx
web/src/components/escrow/: escrow-card.tsx
web/src/components/layout/: header.tsx  wallet-button.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  countdown.tsx  input.tsx  skeleton.tsx
web/src/hooks/: use-countdown.ts  use-escrow-detail.ts  use-escrow.ts  use-release-session.ts  use-wallet-balance.ts
web/src/lib/: constants.ts  idl.json  solana.ts  supabase.ts  utils.ts
web/src/providers/: app-providers.tsx  solana-provider-inner.tsx  solana-provider.tsx
web/src/services/: escrow.anchor.ts  escrow.mock.ts  escrow.service.ts  escrow.supabase.ts  release.service.ts
web/src/stores/: escrow.store.ts  release.store.ts
web/src/types/: css.d.ts  escrow.ts  release.ts
